apps/base/infra-kubernetes-dashboard/deploy/dashboard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-dashboard
spec:
  ports:
    - port: 443
      name: https
      targetPort: https
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: dashboard
