apps/base/infra-kubernetes-dashboard/deploy/dashboard/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-kubernetes-dashboard
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
      app.kubernetes.io/component: dashboard

  ingress:
    # Allow from the ingress controller
    - ports:
        - port: 8443
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
